--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       gunicorn music_game_app.wsgi:application
       --bind 0.0.0.0:8000
       --forwarded-allow-ips="*"
+    restart: always
     ports:
       - "80:8000"
     environment:
