--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,42 @@
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.10
+aiosignal==1.3.1
 annotated-types==0.7.0
 anthropic==0.39.0
 anyio==4.6.2.post1
 asgiref==3.8.1
+attrs==24.2.0
 certifi==2024.8.30
+charset-normalizer==3.4.0
+colorama==0.4.6
 distro==1.9.0
 Django==5.1.3
+djangorestframework==3.15.2
+eval_type_backport==0.2.0
+frozenlist==1.5.0
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
 idna==3.10
 jiter==0.7.0
+jsonpath-python==1.0.6
+mistralai==1.2.5
+multidict==6.1.0
+mypy-extensions==1.0.0
+openai==1.57.0
+pillow==11.0.0
+propcache==0.2.1
 pydantic==2.9.2
 pydantic_core==2.23.4
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+requests==2.32.3
+six==1.17.0
 sniffio==1.3.1
 sqlparse==0.5.1
+tqdm==4.67.1
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
+urllib3==2.2.3
+yarl==1.18.3
