--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     command: >
       gunicorn recipe_app.wsgi:application
       --bind 0.0.0.0:8000
+      --timeout 120
+      --threads 2
       --forwarded-allow-ips="*"
     restart: always
     ports:
