fix host user configuration in docker compose

--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: ../../
       dockerfile: docker/staging/Dockerfile
-    user: "${USER_ID:-$(id -u)}:${GROUP_ID:-$(id -g)}"
+    user: "1002:1002"
     command: >
       gunicorn recipe_app.wsgi:application
       --bind 0.0.0.0:8000
