added profile image model and upload option

--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - ../../logs:/app/logs
       - ../../recipe_app/db.sqlite3:/app/recipe_app/db.sqlite3
       - ../../recipe_app/recipe_images:/app/recipe_app/recipe_images
+      - ../../recipe_app/profile_images:/app/recipe_app/profile_images
     networks:
       - chatrcp-network
 
